--- a/public/css/toot-pay.css
+++ b/public/css/toot-pay.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none !important;
 }
 
+.merchandise-details ul li {
+    font-size: 16px;
+}
+
 footer {
     margin-top: 100px;
 }
@@ -37,7 +41,7 @@ footer {
     margin-bottom: 10px;
 }
 
-.img-merchandise > a > img {
+.img-merchandise a img {
     display: block;
     margin: 0 auto;
 }
