--- a/public/css/toot-pay-client.css
+++ b/public/css/toot-pay-client.css
@@ -48,6 +48,11 @@
     position: relative;
 }
 
+.nav-tabs {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 .qty {
     padding-left: 10px;
     padding-right: 10px;
@@ -107,4 +112,14 @@ body {
 
 #pin_code {
     margin-bottom: 15px;
+}
+
+.menu .col-md-3 {
+    margin-bottom: 30px;
+}
+
+.menu {
+    padding-top: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
