--- a/public/css/toot-pay-client.css
+++ b/public/css/toot-pay-client.css
@@ -119,7 +119,10 @@ body {
 }
 
 .menu {
-    padding-top: 40px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 30px;
+}
+
+.menu .row .col-md-4 img {
+    height: 230px;
+    width: 300px;
 }
