--- a/public/css/toot-pay.css
+++ b/public/css/toot-pay.css
@@ -1,8 +1,3 @@
-/*!
- * Toot Pay (https://github.com/klarizonemar/tootpay)
- * Author: Klarizon Emar Motol
- */
-
 body {
     font-family: 'ProductSans';
     padding-bottom: 20px;
@@ -31,6 +26,11 @@ footer {
 .huge {
     font-size: 50px;
     font-weight: 600;
+}
+
+.cashier-huge {
+    font-size: 20px;
+    height: auto;
 }
 
 .fa-btn {
@@ -76,4 +76,20 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 input[type="number"] {
     -moz-appearance: textfield;
+}
+
+.reload-status-list {
+    margin-bottom: 20px;
+}
+
+.cahier-header {
+    margin-bottom: 20px;
+}
+
+.reload-actions {
+    margin-top: 20px;
+}
+
+.cahier-header div h3 {
+    margin-top: 0px;
 }
