--- a/public/css/toot-pay.css
+++ b/public/css/toot-pay.css
@@ -89,3 +89,32 @@ input[type="number"] {
 .cahier-header div h3 {
     margin-top: 0px;
 }
+
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+    background-color: #4b9ee4;
+    border-color: #4b9ee4;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: #fff;
+    background-color: #4b9ee4;
+}
+
+.navbar-default {
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-brand {
+    color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-brand:hover {
+    color: #ddd;
+}
+
+.navbar-default .navbar-nav > li > a:active, .navbar-default .navbar-brand:active {
+    color: #ddd;
+}
+
+/*todo nav leave font color*/
