--- a/public/css/toot-pay-client.css
+++ b/public/css/toot-pay-client.css
@@ -117,15 +117,16 @@ body {
     margin-bottom: 15px;
 }
 
-.menu .col-md-3 {
-    margin-bottom: 30px;
-}
-
 .menu {
     padding: 30px;
 }
 
-.menu .row .col-md-4 img {
-    height: 230px;
+.menu .row .col-md-3 img {
+    height: 160px;
     width: 300px;
+}
+
+.menu .row .col-md-3 div {
+    font-size: 25px;
+    height: auto;
 }
