--- a/public/css/toot-pay-client.css
+++ b/public/css/toot-pay-client.css
@@ -23,6 +23,11 @@
     padding-bottom: 10px;
 }
 
+#queue_number_huge {
+    font-size: 300px;
+    height: auto;
+}
+
 .merchandise-list {
     padding-top: 5px;
     overflow-x: hidden;
