--- a/public/css/toot-pay-client.css
+++ b/public/css/toot-pay-client.css
@@ -151,3 +151,12 @@ body {
 .user-orders {
     padding: 10px;
 }
+
+.user-avatar {
+    margin-top: 10px;
+}
+
+.user-avatar img {
+    display: block;
+    margin: 0 auto;
+}
