--- a/public/css/toot-pay-cashier.css
+++ b/public/css/toot-pay-cashier.css
@@ -6,50 +6,8 @@
     border: none !important;
 }
 
-.huge-total, .modal-body, .modal-title {
+.modal-body, .modal-title {
     font-size: 25px;
-}
-
-.menu-footer {
-    font-size: 20px;
-}
-
-.category-list {
-    overflow-x: scroll;
-    overflow-y: hidden;
-}
-
-.modal-header img {
-    height: 50px;
-    display: block;
-    margin: 0 auto;
-}
-
-.grand_total {
-    font-size: 40px;
-}
-
-.category-name {
-    padding-bottom: 10px;
-}
-
-#queue_number {
-    font-size: 300px;
-    height: auto;
-}
-
-.merchandise-list {
-    padding-top: 5px;
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
-
-.merchandise-item a img {
-    height: 120px;
-}
-
-.merchandise-item .modal .modal-dialog .modal-content .modal-body .row .col-md-6 img {
-    height: 250px;
 }
 
 .list-inline {
@@ -66,43 +24,12 @@
     position: relative;
 }
 
-.nav-tabs {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.qty {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.table-cell-qty {
-    width: 100%;
-}
-
-html, body, .cashier-view, .col-md-6, .panel, .carousel, .item, .active, .carousel-inner {
+html, body, .cashier-view, .col-md-6, .panel, .item, .active {
     height: 100%;
 }
-
-/*.cashier-actions ul {*/
-    /*padding-top: 10px;*/
-    /*float: right;*/
-/*}*/
 
 body {
     padding-top: 20px;
-}
-
-.carousel-inner .item img {
-    width: 100%;
-    height: 100%;
-}
-
-.rfid-symbol-animated {
-    padding-top: 150px;
-    padding-bottom: 130px;
-    display: block;
-    margin: auto;
 }
 
 .huge {
@@ -110,14 +37,9 @@ body {
     height: auto;
 }
 
-.huge-md {
-    font-size: 40px;
-    height: auto;
-}
-
+.badge,
 .list-unstyled li,
 .list-unstyled li button,
-.list-unstyled li div button,
 .cashier-actions button,
 .list-unstyled li form label,
 .list-unstyled li form button,
@@ -131,45 +53,8 @@ body {
     width: 29% !important;
 }
 
-.cash-suggestion {
+.cash-suggestion, .cashier-actions {
     margin-top: 15px;
-}
-
-.input-unstyled {
-    border: transparent;
-    outline: transparent;
-    color: transparent;
-    -webkit-text-fill-color: transparent;
-    background: transparent;
-}
-.bs-input-unstyled {
-    outline: none;
-    border: none !important;
-    -webkit-box-shadow: none !important;
-    -moz-box-shadow: none !important;
-    box-shadow: none !important;
-}
-
-#pin_code {
-    margin-bottom: 15px;
-}
-
-.menu {
-    padding: 30px;
-}
-
-.menu .row .col-md-3 img {
-    height: 160px;
-    width: 300px;
-}
-
-.menu .row .col-md-3 div {
-    font-size: 25px;
-    height: auto;
-}
-
-.user-orders {
-    padding: 10px;
 }
 
 .logout, .logout:visited {
