done with cahsier loagic

--- a/public/css/toot-pay-cashier.css
+++ b/public/css/toot-pay-cashier.css
@@ -14,6 +14,11 @@
     white-space: nowrap;
 }
 
+#queue_number {
+    font-size: 300px;
+    height: auto;
+}
+
 html, body, .cashier-view, .col-md-6, .panel {
     height: 100%;
 }
