removed "net" in totals

--- a/public/css/toot-pay.css
+++ b/public/css/toot-pay.css
@@ -70,6 +70,10 @@ a {
     margin: 0 auto;
 }
 
+textarea {
+    resize: none;
+}
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
